# os-tools

./: .clippy.toml  .gitignore  .rustfmt.toml  .typos.toml  Cargo.toml  DESIGN-NOTES.md  README.md  REUSE.toml  justfile  licenses.sh  moss-filesystem-performance.md  stone.xml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yaml  release.yaml
boot/: moss-fstx.service  moss-fstx.sh
boot/module/: module-setup.sh
boulder/: Cargo.toml  README.md  boulder-concurrency-test.yaml
boulder/data/: recipeTemplate.yaml
boulder/data/macros/actions/: autotools.yaml  cargo.yaml  ccache.yaml  cmake.yaml  meson.yaml  misc.yaml  ninja.yaml  perl.yaml  pgo.yaml  python.yaml  qt-kde.yaml  ruby.yaml
boulder/data/macros/arch/: aarch64.yaml  base.yaml  riscv64.yaml  x86.yaml  x86_64-stage1.yaml  x86_64-v3x.yaml  x86_64.yaml
boulder/data/macros/arch/emul32/: x86_64.yaml
boulder/data/profile.d/: default-x86_64.yaml
boulder/src/: architecture.rs  build.rs  cli.rs  container.rs  draft.rs  env.rs  macros.rs  main.rs  package.rs  paths.rs  profile.rs  recipe.rs  timing.rs  upstream.rs
boulder/src/cli/: build.rs  cache.rs  chroot.rs  profile.rs  recipe.rs  version.rs
boulder/src/draft/: build.rs  licenses.rs  metadata.rs  monitoring.rs  upstream.rs
boulder/src/draft/metadata/: basic.rs  github.rs  gitlab.rs  metacpan.rs  pypi.rs
boulder/src/package/: analysis.rs  collect.rs  emit.rs
boulder/src/package/analysis/: handler.rs
boulder/src/package/analysis/handler/: elf.rs  python.rs
boulder/src/package/analysis/scripts/: get-py-deps.py
boulder/src/package/emit/: manifest.rs
boulder/src/package/emit/manifest/: binary.rs  json.rs
boulder/src/upstream/: git.rs  plain.rs
crates/astr/: Cargo.toml
crates/astr/src/: cow.rs  diesel.rs  lib.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/container/: Cargo.toml  README.md
crates/container/src/: idmap.rs  lib.rs
crates/dag/: Cargo.toml
crates/dag/src/: lib.rs  subgraph.rs
crates/fnmatch/: Cargo.toml
crates/fnmatch/proptest-regressions/: lib.txt
crates/fnmatch/src/: lib.rs
crates/gitwrap/: Cargo.toml
crates/gitwrap/src/: error.rs  lib.rs
crates/stone/: Cargo.toml
crates/stone/benches/: read.rs
crates/stone/src/: ext.rs  lib.rs  write.rs
crates/stone/src/header/: mod.rs  v1.rs
crates/stone/src/payload/: attribute.rs  content.rs  index.rs  layout.rs  meta.rs  mod.rs
crates/stone/src/read/: digest.rs  mod.rs  zstd.rs
crates/stone/src/write/: digest.rs  zstd.rs
crates/stone_recipe/: Cargo.toml
crates/stone_recipe/src/: control_file.rs  lib.rs  macros.rs  script.rs  serde_util.rs  tuning.rs  upstream.rs
crates/tools_buildinfo/: Cargo.toml  build.rs
crates/tools_buildinfo/src/: lib.rs  values.rs
crates/tracing_common/: Cargo.toml
crates/tracing_common/src/: lib.rs  logging.rs
crates/triggers/: Cargo.toml
crates/triggers/src/: format.rs  lib.rs
crates/tui/: Cargo.toml
crates/tui/src/: lib.rs  pretty.rs  styled.rs
crates/version_parse/: Cargo.toml
crates/version_parse/src/: lib.rs
crates/vfs/: Cargo.toml
crates/vfs/src/: cache.rs  lib.rs  path.rs
crates/vfs/src/tree/: builder.rs  mod.rs
crates/yaml/: Cargo.toml
crates/yaml/src/: lib.rs  updater.rs
libstone/: Cargo.toml  build.rs  cbindgen.toml
libstone/examples/: read.c
libstone/src/: lib.rs  payload.rs  stone.h
libstone/src/payload/: attribute.rs  index.rs  layout.rs  meta.rs
moss/: Cargo.toml
moss/src/: dependency.rs  environment.rs  installation.rs  lib.rs  main.rs  request.rs  runtime.rs  signal.rs  state.rs  system_model.rs  util.rs
moss/src/cli/: boot.rs  cache.rs  extract.rs  fetch.rs  index.rs  info.rs  inspect.rs  install.rs  list.rs  mod.rs  remove.rs  repo.rs  search.rs  search_file.rs  state.rs  sync.rs  version.rs
moss/src/client/: boot.rs  cache.rs  extract.rs  fetch.rs  index.rs  install.rs  mod.rs  postblit.rs  prune.rs  remove.rs  sync.rs  verify.rs
moss/src/db/: mod.rs
moss/src/db/layout/: diesel.toml  mod.rs
moss/src/db/layout/migrations/2024-03-04-192634_init/: down.sql  up.sql
moss/src/db/meta/: mod.rs
moss/src/db/meta/migrations/2024-03-03-165811_init/: down.sql  up.sql
moss/src/db/state/: mod.rs
moss/src/db/state/migrations/2024-03-04-201550_init/: down.sql  up.sql
moss/src/installation/: lockfile.rs
moss/src/package/: meta.rs  mod.rs  render.rs
moss/src/registry/: mod.rs  transaction.rs
moss/src/registry/plugin/: active.rs  cobble.rs  mod.rs  repository.rs
moss/src/repository/: manager.rs  mod.rs
moss/src/system_model/: decode.rs  encode.rs  update.rs
test/: base.yml  boulder-stone.yml  cmake.yml  llvm-stone.yml  trigger.yml  x86_64.yml
test/conflicts/: italian-pizza.yml  pineapple.yml
