# SPDX-FileCopyrightText: 2023 AerynOS Developers
# SPDX-License-Identifier: MPL-2.0

[workspace]
members = ["boulder", "moss", "libstone", "crates/*"]
default-members = ["moss"]
resolver = "3"

[workspace.package]
version = "0.26.1"
edition = "2024"
rust-version = "1.88"

[workspace.dependencies]
astr.path = "crates/astr"
blsforme = { git = "https://github.com/AerynOS/blsforme.git", rev = "680720545303e123e47e0df07a8a85178c9f5c19" }
bytes = "1.6.0"
camino = "1.1.10"
chrono = "0.4.38"
clap = { version = "4.5.8", features = ["derive", "string"] }
clap_complete = "4.5.37"
clap_mangen = "0.2.24"
criterion = { version = "0.8.2", features = ["html_reports"] }
crossterm = "0.29.0"
derive_more = { version = "2.0.1", features = [
    "debug",
    "display",
    "from",
    "into",
] }
dialoguer = "0.12.0"
diesel = { version = "2.2.1", features = [
    "sqlite",
    "returning_clauses_for_sqlite_3_35",
] }
diesel_migrations = "2.2.0"
dirs = "6.0.0"
elf = "0.8.0"
indicatif = "0.18.0"
itertools = "0.14.0"
filetime = "0.2.24"
fs-err = { version = "3.3.0", features = ["tokio"] }

futures-util = "0.3.31"
glob = "0.3.1"
hex = "0.4.3"
indextree = "4.6.1"
libsqlite3-sys = { version = "0.35.0", features = ["bundled"] }
log = "0.4.22"
nc = "0.9.7"
nom = "7.1.3"
nix = { version = "0.27.1", features = [
    "user",
    "fs",
    "sched",
    "process",
    "mount",
    "hostname",
    "signal",
    "term",
] }
os-info = { git = "https://github.com/AerynOS/os-info", rev = "26b39c1d49c3b4f30d778729fb56958824c069de" }
path-clean = "1.0.1"
petgraph = "0.8.2"
rayon = "1.10.0"
regex = "1.10.5"
reqwest = { version = "0.12.5", default-features = false, features = [
    "brotli",
    "charset",
    "deflate",
    "gzip",
    "http2",
    "rustls-tls",
    "stream",
    "zstd",
    "blocking",
    "json",
] }
serde = { version = "1.0.223", features = ["derive"] }
serde_core = "1.0.223"
serde_json = "1.0.145"
serde_yaml = "0.9.34"
sha2 = "0.10.8"
snafu = "0.9.0"
strum = { version = "0.27.1", features = ["derive"] }
thiserror = "2.0.3"
thread-priority = "3.0.0"
tokio = { version = "1.38.0", features = ["full"] }
tokio-util = { version = "0.7.11", features = ["io"] }
tracing = { version = "0.1.41", features = ["attributes"] }
tracing-subscriber = { version = "0.3.19", default-features = false, features = [
    "ansi",
    "fmt",
    "json",
] }
triomphe = { version = "0.1.15", default-features = false }
url = { version = "2.5.2", features = ["serde"] }
xxhash-rust = { version = "0.8.11", features = ["xxh3"] }
zstd = { version = "0.13.2", features = ["zstdmt"] }
mailparse = "0.16.1"
zbus = { version = "5.1.1", default-features = false, features = ["tokio"] }
tempfile = "3.20.0"
kdl = "6.5.0"
libc = "0.2.62"
cbindgen = "0.29.2"

[workspace.lints.rust]
rust_2018_idioms = { level = "warn", priority = -1 }
semicolon_in_expressions_from_macros = "warn"
unused_import_braces = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
branches_sharing_code = "warn"
cloned_instead_of_copied = "warn"
disallowed_types = "warn"
empty_line_after_outer_attr = "warn"
inefficient_to_string = "warn"
macro_use_imports = "warn"
map_flatten = "warn"
missing_enforced_import_renames = "warn"
mut_mut = "warn"
nonstandard_macro_braces = "warn"
semicolon_if_nothing_returned = "warn"
str_to_string = "warn"
uninlined_format_args = "warn"
unreadable_literal = "warn"
wildcard_imports = "warn"

# has false positives in indicatif usage
literal_string_with_formatting_args = "allow"

[profile.dev]
# makes linking faster, enables everything needed for backtraces
# for attaching an interactive debugger, use another profile
debug = "line-tables-only"

[profile.release]
lto = "thin"

[profile.packaging]
inherits = "release"
lto = true
codegen-units = 1
opt-level = 3
# allow packaging system to do it
strip = "none"
debug = true

# We want people who use the onboarding steps to get a nice compromise
# between fast compilation and fast runtime, but with checks in place
# and full backtraces. Hyperfine tests shows opt-level = 1 to be a good
# compromise between compile speed and runtime speed. However, opt-level
# = 2 _is_ faster.
[profile.onboarding]
inherits = "dev"
opt-level = 2
strip = "none"
