# SPDX-FileCopyrightText: 2023 AerynOS Developers
# SPDX-License-Identifier: MPL-2.0

[package]
name = "boulder"
edition.workspace = true
version.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = { path = "../crates/config" }
container = { path = "../crates/container" }
moss = { path = "../moss" }
tools_buildinfo = { path = "../crates/tools_buildinfo" }
stone = { path = "../crates/stone" }
stone_recipe = { path = "../crates/stone_recipe" }
tui = { path = "../crates/tui" }
version_parse = { path = "../crates/version_parse" }
yaml = { path = "../crates/yaml" }

chrono.workspace = true
clap.workspace = true
clap_complete.workspace = true
clap_mangen.workspace = true
derive_more.workspace = true
dirs.workspace = true
elf.workspace = true
filetime.workspace = true
glob.workspace = true
fs-err.workspace = true
futures-util.workspace = true
hex.workspace = true
humansize.workspace = true
itertools.workspace = true
nix.workspace = true
path-clean.workspace = true
rapidfuzz = "0.5.0"
rayon.workspace = true
regex.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
strum.workspace = true
thiserror.workspace = true
thread-priority.workspace = true
tokio.workspace = true
url.workspace = true
mailparse.workspace = true
walkdir = "2.5.0"
zstd.workspace = true
astr.workspace = true
tempfile.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
