# SPDX-FileCopyrightText: 2025 AerynOS Developers
# SPDX-License-Identifier: MPL-2.0

[package]
name = "astr"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
default = []
diesel = ["dep:diesel"]

[dependencies]
stable_deref_trait = "1.2.1"
triomphe.workspace = true

diesel = { workspace = true, optional = true }

[lints]
workspace = true
