# SPDX-FileCopyrightText: 2023 AerynOS Developers
# SPDX-License-Identifier: MPL-2.0

[package]
name = "config"
edition.workspace = true
version.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs.workspace = true
fs-err.workspace = true
serde_core.workspace = true
serde_yaml.workspace = true
snafu.workspace = true

[lints]
workspace = true
