# SPDX-FileCopyrightText: 2025 AerynOS Developers
# SPDX-License-Identifier: MPL-2.0

[package]
name = "tools_buildinfo"
edition.workspace = true
version.workspace = true
rust-version.workspace = true
build = "build.rs"

[dependencies]
chrono.workspace = true

[build-dependencies]
chrono.workspace = true
thiserror.workspace = true

[lints]
workspace = true
