# SPDX-FileCopyrightText: 2025 AerynOS Developers
# SPDX-License-Identifier: MPL-2.0

[package]
name = "tracing_common"
edition.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["json"] }

[lints]
workspace = true
