[package]
name = "version_parse"
edition.workspace = true
version.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex.workspace = true
snafu.workspace = true
url.workspace = true

[lints]
workspace = true
